--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@
     src: url(../assets/fonts/DingTalk_JinBuTi_Regular.ttf) format('truetype');
 }
 
+@media(min-width:600px){
+    body{
+        min-height: 100vh;
+        display: grid;
+        place-items:center;
+    }
+}
+
 :root {
     --clr-primary-hsl-400: 252, 100%, 67%;
     --clr-primary-hsl-500: 256, 72%, 46%;
@@ -16,19 +24,19 @@
     --clr-neutral-hsl-300: 241, 100%, 89%;
     --clr-neutral-hsl-700: 224, 30%, 27%;
 
-    --crl-neutral-100: hsl(var(var(--clr-neutral-hsl-100)));
-    --crl-neutral-200: hsl(var(var(--clr-neutral-hsl-200)));
-    --crl-neutral-300: hsl(var(var(--clr-neutral-hsl-300)));
-    --crl-neutral-700: hsl(var(var(--clr-neutral-hsl-700)));
+    --crl-neutral-100: hsl(var(--clr-neutral-hsl-100));
+    --crl-neutral-200: hsl(var(--clr-neutral-hsl-200));
+    --crl-neutral-300: hsl(var(--clr-neutral-hsl-300));
+    --crl-neutral-700: hsl(var(--clr-neutral-hsl-700));
 
-    --crl-primary-400: hsl(var(var(--clr-primary-hsl-400)));
-    --crl-primary-500: hsl(var(var(--clr-primary-hsl-500)));
-    --crl-secondary-400: hsl(var(var(--clr-secondary-hsl-400)));
-    --crl-secondary-500: hsl(var(var(--clr-secondary-hsl-500)));
+    --clr-primary-400: hsl(var(--clr-primary-hsl-400));
+    --clr-primary-500: hsl(var(--clr-primary-hsl-500));
+    --clr-secondary-400: hsl(var(--clr-secondary-hsl-400));
+    --clr-secondary-500: hsl(var(--clr-secondary-hsl-500));
 
-    --gradient-primary: linear-gradient(var(--clr-primary-40a),
-            var(--cIr-secondary-400));
-    --gradient-to-transparent: linear-gradient(var(--cIr-primary-500),
+    --gradient-primary: linear-gradient(var(--clr-primary-400),
+            var(--clr-secondary-400));
+    --gradient-to-transparent: linear-gradient(var(--clr-primary-500),
             hsl(var(--clr-secondary-hsl-500), .1));
 
     --clr-accent-1: 0, 100%, 67%;
@@ -65,3 +73,16 @@
     margin: 0px;
     font: inherit;
 }
+
+img,
+svg{
+    display: block;
+    max-width: 100%;
+}
+
+body{
+    font-family: var(--font-family-default);
+    font-size: var(--fs-400);
+    color: var(--clr-neutral-700);
+}
+
