--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,21 @@
     src: url(../assets/fonts/DingTalk_JinBuTi_Regular.ttf) format('truetype');
 }
 
-@media(min-width:600px){
-    body{
+@media(min-width:600px) {
+    body {
         min-height: 100vh;
         display: grid;
-        place-items:center;
+        place-items: center;
+    }
+}
+
+@media(min-width:600px) {
+    .result-summary {
+        margin-inline: 1rem;
+        grid-template-columns: 1fr 1fr;
+        border-radius: var(--border-radius);
+        overflow: hidden;
+        box-shadow: .5rem 1rem 3rem hsl(var(--clr-neutral-hsl-700), .2);
     }
 }
 
@@ -24,10 +34,10 @@
     --clr-neutral-hsl-300: 241, 100%, 89%;
     --clr-neutral-hsl-700: 224, 30%, 27%;
 
-    --crl-neutral-100: hsl(var(--clr-neutral-hsl-100));
-    --crl-neutral-200: hsl(var(--clr-neutral-hsl-200));
-    --crl-neutral-300: hsl(var(--clr-neutral-hsl-300));
-    --crl-neutral-700: hsl(var(--clr-neutral-hsl-700));
+    --clr-neutral-100: hsl(var(--clr-neutral-hsl-100));
+    --clr-neutral-200: hsl(var(--clr-neutral-hsl-200));
+    --clr-neutral-300: hsl(var(--clr-neutral-hsl-300));
+    --clr-neutral-700: hsl(var(--clr-neutral-hsl-700));
 
     --clr-primary-400: hsl(var(--clr-primary-hsl-400));
     --clr-primary-500: hsl(var(--clr-primary-hsl-500));
@@ -75,14 +85,62 @@
 }
 
 img,
-svg{
+svg {
     display: block;
     max-width: 100%;
 }
 
-body{
+body {
     font-family: var(--font-family-default);
     font-size: var(--fs-400);
     color: var(--clr-neutral-700);
 }
 
+.section-title {
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-600);
+}
+
+.button {
+    color: var(--clr-neutral-100);
+    line-height: 1;
+    background: var(--clr-neutral-700);
+    padding: 1rem 2rem;
+    border: 0;
+    border-radius: 100vw;
+    cursor: pointer;
+}
+
+.button:hover,
+.button:focus-visible {
+    background: var(--gradient-primary);
+}
+
+/* .button:focus{
+    background: var(--gradient-to-transparent);
+} */
+
+.result-summary {
+    --padding: 2.5rem;
+    --border-radius: 2rem;
+    max-width: 46rem;
+    display: grid;
+}
+
+.results {
+    color: hsl(var(--clr-neutral-hsl-100), .7);
+    text-align: center;
+    background: var(--gradient-primary);
+    border-radius: 0 0 var(--border-radius) var(--border-radius);
+}
+
+@media(min-width:600px) {
+    .results {
+        border-radius: var(--border-radius);
+    }
+}
+
+.results,
+.summary {
+    padding: var(--padding);
+}
